# dotfiles

./: .gitconfig  .vimrc  pyproject.toml  pyrightconfig.json  ruff.toml
